add t5 + blog post

--- a/content/blog/2021-06-21-aaa.md
+++ b/content/blog/2021-06-21-aaa.md
@@ -63,6 +63,10 @@ but well, it got stolen...  My only consolation is the face of the package
 thieves when they open the package, they realize that it's just a couple of
 tiny SMD parts, and they wonder WTF this shit is even good for.
 
+P.S.: I found out that the reason why the coils didn't work was that they were
+not rated for the >200mA that's passing through them.  Once I got a 4.7&micro;H
+coil rated for 280mA, everything was fine.
+
 More pictures:
 
 [![photo, side](/img/blog/2021-06-21_side.jpg)](/img/blog/2021-06-21_side.jpg)
