--- a/content/prototypes/p6.md
+++ b/content/prototypes/p6.md
@@ -3,9 +3,15 @@ title: Prototype 6
 slug: p6
 date: 2021-06-21
 blog: aaa
-image: "blog/2021-06-21_tilted.jpg"
+image: "blog/2021-06-24_closed.jpg"
 wip: true
+tested: true
 components:
 - bp3
 - c9.1
+- t5
 ---
+
+![photo of board](/img/blog/2021-06-21_tilted.jpg)
+
+![photo of when opened up](/img/blog/2021-06-24_open.jpg)
