show final soldered board in assembly instructions

--- a/content/prototypes/p6.md
+++ b/content/prototypes/p6.md
@@ -83,6 +83,10 @@ See also [Circuit 9.1](/c9.1)
     - Once all tests work, solder on the Arduino.  Again, see the "Arduino micruUSB socket here" inscription for how to rotate the Arduino.
 6. Attach Velcro to the PCB on the mounting holes on the corners (you may need to remove battery clips to reach the holes) with needle and threat
 
+In the end, it should look like this:
+
+![soldered board](/img/blog/2021-06-21_front.jpg)
+
 ## Fabric
 
 1. At minimum, sew a 10cm long cylinder that fits tightly around the middle of your forearm
