--- a/content/blog/2021-07-06-logo2.md
+++ b/content/blog/2021-07-06-logo2.md
@@ -4,7 +4,7 @@ slug: logo2
 date: 2021-07-06
 ---
 
-The front page now looks like someone who can fake a marketing degree has designed it, and I changed the logo from
+The front page now looks a little more "modern", and I changed the logo from
 
 ![old logo](/img/blog/2021-07-06_oldlogo.png)
 
