update video URLs to the remastered versions

--- a/content/blog/2021-04-09-fzero.md
+++ b/content/blog/2021-04-09-fzero.md
@@ -61,7 +61,7 @@ a magical keyboard with 2 keys =D
 
 Right away I tried it out to steer in my favorite racing game, F-Zero:
 
-<iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 2 Demo" src="https://peertube.linuxrocks.online/videos/embed/65711ae3-77e4-4f67-8ca9-a7cfe8919d83" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 2 Demo (remastered)" src="https://peertube.linuxrocks.online/videos/embed/2b3bba33-f53f-4654-96f4-e4d0963e7586" frameborder="0" allowfullscreen></iframe>
 
 Note that in addition to the steering wheel, I used my other hand to
 accelerate.
