specified package formats

--- a/content/boards/b2.md
+++ b/content/boards/b2.md
@@ -19,13 +19,13 @@ center.
 
 ## Part placement
 
-- C1: 100pF capacitor
-- C2: 100pF capacitor
-- C3: 100nF capacitor (exact capacitance not very important)
-- R1: 1MOhm resistor, 1% variance
-- R2: 1MOhm resistor, 1% variance
-- R3: 1kOhm resistor, 1% variance
-- INA128: [Texas Instruments INA128 instrumentational amplifier](https://www.ti.com/product/INA128)
+- C1: 100pF capacitor, 0805 package
+- C2: 100pF capacitor, 0805 package
+- C3: 100nF capacitor (exact capacitance not very important), 0805 package
+- R1: 1MOhm resistor, 1% variance, 0805 package
+- R2: 1MOhm resistor, 1% variance, 0805 package
+- R3: 1kOhm resistor, 1% variance, 1206 package
+- INA128: [Texas Instruments INA128 instrumentational amplifier](https://www.ti.com/product/INA128), SOIC/SO-8 package
 
 ## Pins
 
