--- a/content/prototypes/p4.md
+++ b/content/prototypes/p4.md
@@ -53,7 +53,7 @@ signals and intended keys, and can press them for you.
 - Components:
     - 1x [Arduino Nano 33 BLE Sense](https://store.arduino.cc/arduino-nano-33-ble-sense)
     - 1x [LM324 Operational Amplifier](https://www.ti.com/product/LM324)
-    - 8x [INA128 Instrumentational Amplifier](https://www.ti.com/product/INA128)
+    - 8x [INA128 Instrumentational Amplifier](https://www.ti.com/product/INA128), SOIC package
     - Any portable 6V power supply (like 2x CR2032)
     - 17x Electrodes, e.g. [Prym 390120](https://www.prym.com/en/non-sew-refill-for-390120-smooth-cap-10mm-silver-coloured-390104) (don't laugh, they work)
     - A forearm sleeve from non-conductive fabric
