add batch-update post and p7

--- a/content/circuits/c6.md
+++ b/content/circuits/c6.md
@@ -7,5 +7,5 @@ src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit6.
 blog: power
 tested: true
 boards: ["bp1", "b1", "b2"]
-prototypes: ["p4"]
+prototypes: ["p4", "p7"]
 ---
