--- a/content/circuits/c9.1.md
+++ b/content/circuits/c9.1.md
@@ -5,7 +5,7 @@ image: circuits/c9.1.png
 date: 2021-06-21
 blog: aaa
 tested: true
-prototypes: ["p6"]
+prototypes: ["p6", "p7"]
 boards: ["bp3"]
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit9.1.sch
 ---
