--- a/content/circuits/c10.md
+++ b/content/circuits/c10.md
@@ -4,6 +4,7 @@ slug: c10
 image: circuits/c10.png
 date: 2021-09-30
 boards: ["b3"]
+blog: "batch-update"
 tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit10.sch
 ---
