add prototype link to b3

--- a/content/boards/b3.md
+++ b/content/boards/b3.md
@@ -5,6 +5,7 @@ image: boards/b3.png
 image_back: boards/b3_back.png
 date: 2021-09-30
 blog: batch-update
+prototypes: ["p8"]
 tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/b3.kicad_pcb
 circuit: c10
