--- a/content/circuits/c9.1.md
+++ b/content/circuits/c9.1.md
@@ -6,7 +6,7 @@ date: 2021-06-21
 blog: aaa
 tested: true
 prototypes: ["p6", "p7"]
-boards: ["bp3"]
+boards: ["bp3", "bp3.1"]
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit9.1.sch
 ---
 
