--- a/content/circuits/c9.md
+++ b/content/circuits/c9.md
@@ -3,7 +3,7 @@ title: Circuit 9
 slug: c9
 image: circuits/c9.png
 date: 2021-06-15
-boards: ["bp3"]
+boards: ["bp3", "bp3.1"]
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit9.sch
 ---
 
