--- a/content/boards/b1.md
+++ b/content/boards/b1.md
@@ -6,7 +6,7 @@ date: 2021-04-30
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit5.1d.kicad_pcb
 blog: pcb
 circuit: c5.1
-prototypes: ["p4"]
+prototypes: ["p4", "p7"]
 tested: true
 ---
 
