add better picture for newest blog entry

--- a/content/blog/2021-12-15-bp4.md
+++ b/content/blog/2021-12-15-bp4.md
@@ -4,11 +4,11 @@ slug: power-module4
 date: 2021-12-15
 ---
 
-{{% link "p8" %}} needs a matching power module, I can't continue to awkwardly
+{{% link "p8" %}} needs a matching power module.  I can't continue to awkwardly
 stuff the rubber band between the velcro and the PCB of {{% link "bp3" %}} like
-on the left side of this picture:
+this:
 
-![...](/img/blog/2021-10-06_p8_test2.jpg)
+![showing a p8 with a very awkward rubber band construction](/img/blog/2021-10-06_p8_rubber_band.jpg)
 
 We need a PCB with proper rubber band holes and screw mounting points, so it
 can be worn along the [radius
