add sentence about identical PCB footprints of INA128 and INA155

--- a/content/blog/2021-12-16-ina155.md
+++ b/content/blog/2021-12-16-ina155.md
@@ -8,7 +8,8 @@ I tried replacing the [INA128](https://www.ti.com/product/INA128) chips on the
 {{% link "b3" %}} with [INA155](https://www.ti.com/product/INA155) chips
 with a Gain of 50, and it works just fine :) The signal even looks a little bit
 cleaner than with the INA128, though I don't have good metrics to decide which
-one is better overall.
+one is better overall.  They both have the same PCB footprint so I didn't even
+have to change the board design :)
 
 This is good news.  If I buy the INA155 chips in bulk (250+), they would cost
 ~1.75€ each (and I currently pay ~5.65€ per INA128), which would bring the
