--- a/content/blog/2021-12-18-p8.md
+++ b/content/blog/2021-12-18-p8.md
@@ -4,10 +4,10 @@ slug: prototype8
 date: 2021-12-18
 ---
 
-The order of {{% link "bp4" %}} finally arrived, and so all the parts for {{%
-link "p8" %}} were here :)  After some assembly (and crimping of some
-rainbow-colored connectors that look a little neater than those stray black
-wires from previous photos), this is the final picture:
+The order of the PCB of {{% link "bp4" %}} has arrived, and so all the
+parts for {{% link "p8" %}} are finally here :)  After some assembly (and
+crimping of some rainbow-colored connectors that look a little neater than
+those stray black wires from previous photos), this is the final picture:
 
 [![photo of the p8](/img/blog/2021-12-18_p8.jpg)](/img/blog/2021-12-18_p8.jpg)
 
