--- a/content/prototypes/p8.md
+++ b/content/prototypes/p8.md
@@ -1,10 +1,10 @@
 ---
 title: Prototype 8
 slug: p8
-date: 2021-12-15
-blog: batch-update
-image: "blog/2021-10-06_p8_test.jpg"
-wip: true
+date: 2021-12-17
+blog: prototype8
+image: "prototypes/p8.jpg"
+tested: true
 components:
 - bp4
 - b3
@@ -12,6 +12,10 @@ components:
 - c11
 ---
 
-This prototype is a work-in-progress, should be done by the end of 2021.
+A prototype with EMG signal quality comparable to {{% link "p7" %}}, but designed for quick/cheap manufacturing and superior robustness.
 
-See {{% link "p4" %}} or {{% link "p6" %}} for working prototypes.
+This modular design combines {{% link "bp4" %}} as a power source, one or more {{% link "b3" %}} to generate the electromyography signals, and an Arduino Nano 33 BLE Sense to process those signals and deliver them to a PC via BLE (Bluetooth Low Energy).
+
+Up to 8 EMG signals can be acquired from {{% link "b3" %}} boards, which have 4 electrode pairs connected to 4 INA128 instrumentation amplifier chips each.  One can use any constellation of {{% link "b3" %}} boards, like one board with only one INA128 chip, two fully equipped boards next to each other, eight boards with one INA128 chip each, all over the body, or anything in between.
+
+The raw material price ranges from ~20€ (one signal) to ~60€ (eight signals) plus the price of the Arduino Nano 33 BLE Sense.
