renamed "Diff. Amplifier X" boards to "Electrode Module X"

--- a/content/blog/2021-12-15-bp4.md
+++ b/content/blog/2021-12-15-bp4.md
@@ -13,7 +13,7 @@ this:
 We need a PCB with proper rubber band holes and screw mounting points, so it
 can be worn along the [radius
 bone](https://en.wikipedia.org/w/index.php?title=Radius_(bone)&oldid=1059884654)
-with about 2x {{% link "b3" %}} boards beside it.
+with about 2x {{% link "b3" %}} beside it.
 
 Unfortunately the large dimensions of the Arduino and the battery make it a
 little difficult.  There's several options to do this, but none of them are
