--- a/content/blog/2021-12-16-ina155.md
+++ b/content/blog/2021-12-16-ina155.md
@@ -19,7 +19,7 @@ totally worth it.
 
 At this price, it would even be affordable to use more than 8 signals (with
 additional analog multiplexing, since the Arduino only has 8 analog inputs)
-and wear more than two {{% link "b3" %}} boards at the same time.
+and wear more than two {{% link "b3" %}} at the same time.
 
 Another big plus is that INA155 chips can easily work with a supply voltage of
 3.3V!!  And I wouldn't need to boost the battery voltage all the way up to 5V
