--- a/content/blog/2021-12-18-p8.md
+++ b/content/blog/2021-12-18-p8.md
@@ -41,6 +41,6 @@ The {{% link "bp4" %}} is not perfect though:
   side, and looks a little awkward.
 - I also wish that the analog pins were closer to the power pins, so that I can
   bundle up the wires, resulting in what would appear like one single
-  connector, rather than two, per {{% link "b3" %}} board.  Although this may
+  connector, rather than two, per {{% link "b3" %}}.  Although this may
   lead to EM interference between the wires, reducing the quality of the
   signal, so maybe it's actually better this way.
