--- a/content/prototypes/p8.md
+++ b/content/prototypes/p8.md
@@ -14,7 +14,7 @@ components:
 
 A prototype designed for quick/cheap manufacturing, solid robustness, and an EMG signal quality comparable to the previously best prototype, {{% link "p7" %}}.
 
-This modular design combines {{% link "bp4" %}} as a power source, one or more {{% link "b3" %}} to generate the electromyography signals, and an Arduino Nano 33 BLE Sense to process those signals and deliver them to a PC via BLE (Bluetooth Low Energy).
+This modular design combines {{% link "bp4" %}} with one or more {{% link "b3" %}} to generate the electromyography signals, and an Arduino Nano 33 BLE Sense to process those signals and deliver them to a PC via BLE (Bluetooth Low Energy).
 
 Up to 8 EMG signals can be acquired from {{% link "b3" %}} boards, which have 4 electrode pairs each, which in turn are connected to an INA128 [instrumentation amplifier](https://en.wikipedia.org/wiki/Instrumentation_amplifier) chip each.  One can use any constellation of {{% link "b3" %}} boards, such as a single electrode board with only one INA128 chip (to produce just one signal), two fully equipped boards next to each other (for 8 signals in total), eight boards with one INA128 chip each at various places of the body, or anything in between.  It's also possible to bypass the INA128 chips and hook the electrodes directly to the ADC.
 
