add update on INA155 post

--- a/content/blog/2021-12-16-ina155.md
+++ b/content/blog/2021-12-16-ina155.md
@@ -24,3 +24,21 @@ and wear more than two {{% link "b3" %}} at the same time.
 Another big plus is that INA155 chips can easily work with a supply voltage of
 3.3V!!  And I wouldn't need to boost the battery voltage all the way up to 5V
 anymore, which is probably not very power efficient.
+
+## IMPORTANT UPDATE:
+
+I did some more tests and concluded that with the electrodes that I'm currently
+using, the maximum gain of INA155 is not high enough, and I have to
+either find better electrodes, add extra amplifiers, or switch back to INA128
+for the time being.  For now, the relatively expensive INA155's will have to
+do.
+
+But hey, the current electrodes are literally just... plain metal spacer
+screws, so there is DEFINITELY room for improvement.
+
+Here are some pictures of electrode placement and resulting signals, where you
+can see that the INA128 (blue line) shows considerably more features:
+
+[![resulting signal](/img/blog/2021-12-17_193758.png)](/img/blog/2021-12-17_193758.png)
+
+[![electrode placement](/img/blog/2021-12-17-193902.jpg)](/img/blog/2021-12-17-193902.jpg)
