--- a/content/blog/2021-12-16-ina155.md
+++ b/content/blog/2021-12-16-ina155.md
@@ -25,7 +25,7 @@ Another big plus is that INA155 chips can easily work with a supply voltage of
 3.3V!!  And I wouldn't need to boost the battery voltage all the way up to 5V
 anymore, which is probably not very power efficient.
 
-## IMPORTANT UPDATE:
+## CORRECTION
 
 I did some more tests and concluded that with the electrodes that I'm currently
 using, the maximum gain of INA155 is not high enough, and I have to
