mark c11 as tested

--- a/content/circuits/c11.md
+++ b/content/circuits/c11.md
@@ -4,6 +4,7 @@ slug: c11
 image: circuits/c11.png
 date: 2021-12-12
 blog: power-module4
+tested: true
 prototypes: ["p8"]
 boards: ["bp4"]
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit11.sch
