add video link to p8

--- a/content/prototypes/p8.md
+++ b/content/prototypes/p8.md
@@ -4,6 +4,7 @@ slug: p8
 date: 2021-12-17
 blog: prototype8
 image: "prototypes/p8.jpg"
+video: "https://peertube.linuxrocks.online/w/vELMqkNxjVWzxUj1f7eCeX"
 tested: true
 components:
 - bp4
