add "if you require assembly instructions" notes to prototypes

--- a/content/prototypes/p1.md
+++ b/content/prototypes/p1.md
@@ -15,3 +15,5 @@ aluminum foil to the skin and connecting them via alligator clamps to the
 analog pins of an Arduino creates enough signal to be used for a human input
 device, as you can see in the [video
 demo.](https://peertube.linuxrocks.online/videos/watch/a32a87cd-7a40-4cc2-8984-b44be52a8e2c)
+
+If you require assembly instructions or further information, please [contact the author](/faq).
