--- a/content/prototypes/p2.md
+++ b/content/prototypes/p2.md
@@ -18,3 +18,5 @@ a PC via USB and live-streams the collected signals via UART.
 This is what the inside of the sleeve looks like:
 
 ![photo1](/img/prototypes/p2_inside.jpg)
+
+If you require assembly instructions or further information, please [contact the author](/faq).
