--- a/content/prototypes/p3.md
+++ b/content/prototypes/p3.md
@@ -30,3 +30,5 @@ The electrodes are simple metal studs:
 
 Note that there are 16 electrodes, 8 pairs of two, going around the wrist, but
 only 8 of these are actually connected.
+
+If you require assembly instructions or further information, please [contact the author](/faq).
