--- a/content/prototypes/p4.md
+++ b/content/prototypes/p4.md
@@ -64,3 +64,5 @@ signals and intended keys, and can press them for you.
         - Idle: ~86.9mW (16.9mA x 5.14V)
         - Transmitting at 6-7kB/s: 92.5mW (18.0mA x 5.14V)
 - Weight: ~85g (at 9.81m/s² gravitational acceleration)
+
+If you require assembly instructions or further information, please [contact the author](/faq).
