--- a/content/prototypes/p6.md
+++ b/content/prototypes/p6.md
@@ -111,3 +111,5 @@ In the end, it should look like this:
     9. Pull the shrink-on tube towards the electrode and burn it
 4. Repeat this 9 times. Each cable should be just long enough to reach the target electrode on the fabric.
 5. Plug the ground electrode into one of the Vref pins of the board, and the other electrodes into the A0-A7 pins
+
+If you require more detailed assembly instructions or further information, please [contact the author](/faq).
