--- a/content/prototypes/p7.md
+++ b/content/prototypes/p7.md
@@ -16,3 +16,5 @@ components:
 This is mostly {{% link "p4" %}} where {{% link "bp1" %}} is replaced with the advanced {{% link "bp3" %}} from {{% link "p6" %}}.  See the respective pages for details and assembly instructions.
 
 The circuit is mostly {{% link "c6" %}}, except that the "Power supply module" part has been replaced entirely by {{% link "c9.1" %}}
+
+If you require assembly instructions or further information, please [contact the author](/faq).
