--- a/content/boards/b3.1.md
+++ b/content/boards/b3.1.md
@@ -4,6 +4,7 @@ slug: b3.1
 image: boards/b3.1.png
 image_back: boards/b3.1_back.png
 date: 2022-01-06
+prototypes: ["p9"]
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/b3.1.kicad_pcb
 circuit: c10.1
 ---
