--- a/content/circuits/c10.1.md
+++ b/content/circuits/c10.1.md
@@ -4,5 +4,6 @@ slug: c10.1
 image: circuits/c10.1.png
 date: 2022-01-06
 boards: ["b3.1"]
+prototypes: ["p9"]
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit10.1.sch
 ---
