--- a/content/circuits/c12.md
+++ b/content/circuits/c12.md
@@ -4,6 +4,7 @@ slug: c12
 image: circuits/c12.png
 date: 2022-01-06
 boards: ["bp4.1"]
+prototypes: ["p9"]
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit12.sch
 ---
 
