add p9 photo and small description

--- a/content/prototypes/p9.md
+++ b/content/prototypes/p9.md
@@ -2,8 +2,8 @@
 title: Prototype 9
 slug: p9
 date: 2022-01-12
-image: "prototypes/p8.jpg"
-wip: true
+image: "prototypes/p9.jpg"
+tested: true
 components:
 - bp4.1
 - b3.1
@@ -11,4 +11,4 @@ components:
 - c12
 ---
 
-Work in progress.
+This is basically just {{% link "p8" %}} with some minor bug fixes and enhancements.
