--- a/content/textiles/t5.md
+++ b/content/textiles/t5.md
@@ -16,4 +16,4 @@ date: 2021-06-23
 
 Photo of when closed:
 
-[[![photo, closed](/img/blog/2021-06-24_closed.jpg)](/img/blog/2021-06-24_closed.jpg)
+[![photo, closed](/img/blog/2021-06-24_closed.jpg)](/img/blog/2021-06-24_closed.jpg)
