--- a/content/blog/2021-12-16-ina155.md
+++ b/content/blog/2021-12-16-ina155.md
@@ -30,8 +30,7 @@ anymore, which is probably not very power efficient.
 I did some more tests and concluded that with the electrodes that I'm currently
 using, the maximum gain of INA155 is not high enough, and I have to
 either find better electrodes, add extra amplifiers, or switch back to INA128
-for the time being.  For now, the relatively expensive INA155's will have to
-do.
+for the time being.  For now, the relatively expensive INA128s will have to do.
 
 But hey, the current electrodes are literally just... plain metal spacer
 screws, so there is DEFINITELY room for improvement.
