add new revisions for P9 boards

--- a/content/circuits/c12.1.md
+++ b/content/circuits/c12.1.md
@@ -1,12 +1,11 @@
 ---
-title: Circuit 12
-slug: c12
-image: circuits/c12.png
-date: 2022-01-06
-boards: ["bp4.1"]
+title: Circuit 12.1
+slug: c12.1
+image: circuits/c12.1.png
+date: 2022-01-26
+boards: ["bp4.2"]
 prototypes: ["p9"]
-tested: true
-src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit12.sch
+src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit12.1.sch
 ---
 
 The base circuit with a power supply, reference voltage generator, several
@@ -14,8 +13,8 @@ configuration jumpers, as well as connectors for the Arduino and further
 circuits like {{% link "c10" %}}.
 
 You can change the values for R3, R4, and all capacitors by ~1 order of
-magnitude without too much impact. R3 needs to be equal to R4.  R5/R6 may need
-to be adapted to whichever LED and supply voltage you use, see e.g. [this LED
+magnitude without too much impact. R3 needs to be equal to R4.  R5 may need to
+be adapted to whichever LED and supply voltage you use, see e.g. [this LED
 resistor
 calculator.](https://www.allaboutcircuits.com/tools/led-resistor-calculator/)
 
