--- a/content/circuits/c10.1.md
+++ b/content/circuits/c10.1.md
@@ -5,5 +5,6 @@ image: circuits/c10.1.png
 date: 2022-01-06
 boards: ["b3.1"]
 prototypes: ["p9"]
+tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit10.1.sch
 ---
