mark c10.2 as tested

--- a/content/circuits/c10.2.md
+++ b/content/circuits/c10.2.md
@@ -5,6 +5,7 @@ image: circuits/c10.2.png
 date: 2022-02-01
 boards: ["b3.2"]
 prototypes: ["p9"]
+tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit10.2.sch
 ---
 
