add software pages and links between components

--- a/content/boards/b3.1.md
+++ b/content/boards/b3.1.md
@@ -5,7 +5,7 @@ image: boards/b3.1.png
 image_back: boards/b3.1_back.png
 date: 2022-01-06
 tested: true
-prototypes: ["p9"]
+prototypes: ["p9", "p9.1"]
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/b3.1.kicad_pcb
 circuit: c10.1
 ---
