--- a/content/circuits/c10.2.md
+++ b/content/circuits/c10.2.md
@@ -4,7 +4,7 @@ slug: c10.2
 image: circuits/c10.2.png
 date: 2022-02-01
 boards: ["b3.2"]
-prototypes: ["p9"]
+prototypes: ["p9.1", "p9.2"]
 tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit10.2.sch
 ---
