--- a/content/prototypes/p4.md
+++ b/content/prototypes/p4.md
@@ -11,6 +11,8 @@ components:
 - bp1
 - c6
 - t4
+- sabt1
+- s3
 ---
 
 This is intended as a human input device (like a keyboard) that predicts your
