--- a/content/prototypes/p8.md
+++ b/content/prototypes/p8.md
@@ -11,6 +11,8 @@ components:
 - b3
 - c10
 - c11
+- sabt1
+- s3
 ---
 
 A prototype with up to 16 electrodes designed for quick/cheap manufacturing, solid robustness, and an EMG signal quality comparable to the previously best prototype, {{% link "p7" %}}.
