--- a/content/prototypes/p9.md
+++ b/content/prototypes/p9.md
@@ -10,6 +10,8 @@ components:
 - b3.1
 - c10.1
 - c12
+- sabt1
+- s3
 ---
 
 This is basically just {{% link "p8" %}} with some minor bug fixes and enhancements.
