--- a/content/circuits/c12.md
+++ b/content/circuits/c12.md
@@ -4,7 +4,7 @@ slug: c12
 image: circuits/c12.png
 date: 2022-01-06
 boards: ["bp4.1"]
-prototypes: ["p9"]
+prototypes: ["p9", "p9.1"]
 tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit12.sch
 ---
