--- a/content/prototypes/p7.md
+++ b/content/prototypes/p7.md
@@ -11,6 +11,8 @@ components:
 - c9.1
 - c6
 - t4
+- sabt1
+- s3
 ---
 
 This is mostly {{% link "p4" %}} where {{% link "bp1" %}} is replaced with the advanced {{% link "bp3" %}} from {{% link "p6" %}}.  See the respective pages for details and assembly instructions.
