add sgr3 page, update gnuradio links, add guide on how to use gnuradio

--- a/content/prototypes/p9.md
+++ b/content/prototypes/p9.md
@@ -12,6 +12,7 @@ components:
 - c12
 - sabt1
 - s3
+- sgr3
 ---
 
 This is basically just {{% link "p8" %}} with some minor bug fixes and enhancements.
