add price of MCP6N11-100

--- a/content/blog/2022-02-22-mcp6n11.md
+++ b/content/blog/2022-02-22-mcp6n11.md
@@ -4,7 +4,7 @@ slug: mcp6n11
 date: 2022-02-22
 ---
 
-[In my quest for premature optimization](/blog/ina155), I tried out yet another instrumentation amplifier chip: The [Microchip MCP6N11-100](https://www.microchip.com/en-us/product/MCP6N11).  This chip is about 4 times cheaper than the INA128 instrumentational amplifier (which is currently the cost bottleneck), and would make a 16-electrode-PsyLink about half as expensive.  It also works with as little as 1.8V (while INA128 requires 4.5V), eliminating the need for power conversion if a 3.7V lithium battery is used.
+[In my quest for premature optimization](/blog/ina155), I tried out yet another instrumentation amplifier chip: The [Microchip MCP6N11-100](https://www.microchip.com/en-us/product/MCP6N11).  At 1.55€, this chip is about 4 times cheaper than the INA128 instrumentational amplifier (which is currently the cost bottleneck), and would make a 16-electrode-PsyLink about half as expensive.  It also works with as little as 1.8V (while INA128 requires 4.5V), eliminating the need for power conversion if a 3.7V lithium battery is used.
 
 Unfortunately the pin configuration is different from the INA128 that the {{% link "b3.1" %}} normally uses, so I had to jury-rig the board a little:
 
