credit Alex Lao and outline next steps

--- a/content/blog/2022-02-23-reddot.md
+++ b/content/blog/2022-02-23-reddot.md
@@ -4,7 +4,7 @@ slug: reddot
 date: 2022-02-23
 ---
 
-I tried out new electrodes, the [3M "Red Dot" 2248-50 electrodes](https://www.3m.com/3M/en_US/medical-us/red-dot-ecg-electrodes/) for patient monitoring, with "Micropore Tape" and "Solid Gel":
+[Alex Lao](http://www.voltagedivide.com/) suggested to try some [3M Red Dot electrodes](http://www.voltagedivide.com/), and so I got me some of the model [2248-50](https://www.3m.com/3M/en_US/p/d/v000154363/) (he actually suggested model [2660](https://www.3m.com/3M/en_US/p/d/b00037638/) but I mixed it up.)  They are used for ECG patient monitoring, which is close enough, right?
 
 ![photo of the electrodes](/img/blog/2022-02-23_trodes.jpg)
 
@@ -26,6 +26,9 @@ The nice surprise was the specificity of the signals.  I only saw signals when I
 - There are less mechanical artifacts from electrodes moving around
 - The ground electrode is closer to the wrist here, whereas in the default configuration, it's closer to the middle of the bone.
 
-It's good to see that it works, and there's clearly a potential, but I'm not blown away either and will move on in other directions.
+It's good to see that it works, and there's clearly a potential, but I'm not blown away either.  Next steps could be:
+
+- increasing the gain
+- trying electrodes with better adhesion like the [3M 2660](https://www.3m.com/3M/en_US/p/d/b00037638/)
 
 Note that before attaching the electrodes, I did **not** shave off hair and did **not** clean off skin oils with alcohol, but at least I was fresh out the shower.  Ok, time to end this post, this is getting weird :).
