--- a/content/blog/2022-02-23-reddot.md
+++ b/content/blog/2022-02-23-reddot.md
@@ -4,7 +4,7 @@ slug: reddot
 date: 2022-02-23
 ---
 
-[Alex Lao](http://www.voltagedivide.com/) suggested to try some [3M Red Dot electrodes](http://www.voltagedivide.com/), and so I got me some of the model [2248-50](https://www.3m.com/3M/en_US/p/d/v000154363/) (he actually suggested model [2660](https://www.3m.com/3M/en_US/p/d/b00037638/) but I mixed it up.)  They are used for ECG patient monitoring, which is close enough, right?
+[Alex Lao](http://www.voltagedivide.com/) suggested to try some [3M Red Dot electrodes](https://www.3m.com/3M/en_US/medical-us/red-dot-ecg-electrodes/), and so I got me some of the model [2248-50](https://www.3m.com/3M/en_US/p/d/v000154363/) (he actually suggested model [2660](https://www.3m.com/3M/en_US/p/d/b00037638/) but I mixed it up.)  They are used for ECG patient monitoring, which is close enough, right?
 
 ![photo of the electrodes](/img/blog/2022-02-23_trodes.jpg)
 
