--- a/content/boards/b3.2.md
+++ b/content/boards/b3.2.md
@@ -5,6 +5,7 @@ image: boards/b3.2.png
 image_back: boards/b3.2_back.png
 date: 2022-01-26
 prototypes: ["p9.2"]
+tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/b3.2.kicad_pcb
 circuit: c10.2
 ---
