--- a/content/circuits/c12.1.md
+++ b/content/circuits/c12.1.md
@@ -5,6 +5,7 @@ image: circuits/c12.1.png
 date: 2022-01-26
 boards: ["bp4.2"]
 prototypes: ["p9.2"]
+tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit12.1.sch
 ---
 
