relate P9.* with P8 in their description

--- a/content/prototypes/p9.1.md
+++ b/content/prototypes/p9.1.md
@@ -14,6 +14,8 @@ components:
 - sgr3
 ---
 
+This basically {{% link "p8" %}} with minor bug fixes, higher amplification gain, an optional power LED, and easier assembly.  See its description for more information.
+
 Changes to {{% link "p9" %}}:
 
 - Increased amplification gain on electrode modules from x51 to x501.  This
