--- a/content/prototypes/p9.md
+++ b/content/prototypes/p9.md
@@ -15,4 +15,4 @@ components:
 - sgr3
 ---
 
-This is basically just {{% link "p8" %}} with some minor bug fixes and enhancements.
+This basically {{% link "p8" %}} with minor bug fixes and an optional power LED.  See its description for more information.
