--- a/content/boards/b3.2.md
+++ b/content/boards/b3.2.md
@@ -8,6 +8,7 @@ prototypes: ["p9.2"]
 tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/b3.2.kicad_pcb
 circuit: c10.2
+priority: 1
 ---
 
 ## Details
