--- a/content/circuits/c10.2.md
+++ b/content/circuits/c10.2.md
@@ -7,6 +7,7 @@ boards: ["b3.2"]
 prototypes: ["p9.1", "p9.2"]
 tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit10.2.sch
+priority: 1
 ---
 
 Changes compared to {{% link "c10.1" %}}:
