--- a/content/circuits/c12.1.md
+++ b/content/circuits/c12.1.md
@@ -7,6 +7,7 @@ boards: ["bp4.2"]
 prototypes: ["p9.2"]
 tested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit12.1.sch
+priority: 1
 ---
 
 The base circuit with a power supply, reference voltage generator, several
