add blog pots authorship info, nicer date under posts

--- a/content/blog/2021-04-03-the-idea.md
+++ b/content/blog/2021-04-03-the-idea.md
@@ -2,6 +2,7 @@
 title: "The Idea"
 slug: idea
 date: 2021-04-03
+author: Roman
 ---
 
 On this day, I got the idea and started researching EMG design and signal
