--- a/content/blog/2021-04-09-fzero.md
+++ b/content/blog/2021-04-09-fzero.md
@@ -2,6 +2,7 @@
 title: "F-Zero"
 slug: fzero
 date: 2021-04-09
+author: Roman
 ---
 
 The look of the first device was way too unprofessional, so I pulled out my
