--- a/content/blog/2021-04-11-ai.md
+++ b/content/blog/2021-04-11-ai.md
@@ -2,6 +2,7 @@
 title: "Adding some AI"
 slug: ai
 date: 2021-04-11
+author: Roman
 ---
 
 Most neural interfaces I've seen so far require the human to train how to use
