--- a/content/blog/2021-04-13-gauntlet.md
+++ b/content/blog/2021-04-13-gauntlet.md
@@ -2,6 +2,7 @@
 title: "Cyber Gauntlet +1"
 slug: gauntlet
 date: 2021-04-13
+author: Roman
 ---
 
 So if you ever worked with electromyography, this will come to no surprise to
