--- a/content/blog/2021-04-30-pcb.md
+++ b/content/blog/2021-04-30-pcb.md
@@ -2,6 +2,7 @@
 title: "PCB Time"
 slug: pcb
 date: 2021-04-30
+author: Roman
 ---
 
 Today I made a new version of the PCB that processes the signals from one
