--- a/content/blog/2021-04-48-wireless.md
+++ b/content/blog/2021-04-48-wireless.md
@@ -2,6 +2,7 @@
 title: "Going Wireless"
 slug: wireless
 date: 2021-04-28
+author: Roman
 ---
 
 I've been battling with reducing the power line noise for too long, so I
