--- a/content/blog/2021-05-06-ui2.md
+++ b/content/blog/2021-05-06-ui2.md
@@ -2,6 +2,7 @@
 title: "Finished new UI"
 slug: ui2
 date: 2021-05-06
+author: Roman
 ---
 
 The new user interface now supports all previous features!
