--- a/content/blog/2021-05-07-new-name.md
+++ b/content/blog/2021-05-07-new-name.md
@@ -2,6 +2,7 @@
 title: "New Name"
 slug: new-name
 date: 2021-05-07
+author: Roman
 ---
 
 After some brainstorming, I changed the working title of this project from
