--- a/content/blog/2021-05-29-website.md
+++ b/content/blog/2021-05-29-website.md
@@ -2,6 +2,7 @@
 title: "Dedicated Website"
 slug: website
 date: 2021-05-29
+author: Roman
 ---
 
 The PsyLink project now has it's own website: [psylink.me](https://psylink.me),
