--- a/content/blog/2021-06-21-aaa.md
+++ b/content/blog/2021-06-21-aaa.md
@@ -2,6 +2,7 @@
 title: "Running on AAA battery"
 slug: aaa
 date: 2021-06-21
+author: Roman
 ---
 
 Wow, it feels like ages since I started working on making PsyLink run on a
