--- a/content/blog/2021-06-24-pipboy.md
+++ b/content/blog/2021-06-24-pipboy.md
@@ -2,6 +2,7 @@
 title: "Cyber Wristband of Telepathy +2 [UNIQUE ITEM]"
 slug: pipboy
 date: 2021-06-24
+author: Roman
 ---
 
 {{% link "bp3" %}} finally found a home: {{% link "t5" %}}.  Looks a bit like a Pip-Boy from the Fallout Series :)
