--- a/content/blog/2021-07-06-logo2.md
+++ b/content/blog/2021-07-06-logo2.md
@@ -2,6 +2,7 @@
 title: "New Frontpage + Logo"
 slug: logo2
 date: 2021-07-06
+author: Roman
 ---
 
 The front page now looks a little more "modern", and I changed the logo from
