--- a/content/blog/2021-12-15-bp4.md
+++ b/content/blog/2021-12-15-bp4.md
@@ -2,6 +2,7 @@
 title: "Power Module 4"
 slug: power-module4
 date: 2021-12-15
+author: Roman
 ---
 
 {{% link "p8" %}} needs a matching power module.  I can't continue to awkwardly
