--- a/content/blog/2021-12-16-ina155.md
+++ b/content/blog/2021-12-16-ina155.md
@@ -2,6 +2,7 @@
 title: "INA155 Instrumentation Amplifier"
 slug: ina155
 date: 2021-12-16
+author: Roman
 ---
 
 I tried replacing the [INA128](https://www.ti.com/product/INA128) chips on the
