--- a/content/blog/2021-12-18-p8.md
+++ b/content/blog/2021-12-18-p8.md
@@ -2,6 +2,7 @@
 title: "Prototype 8"
 slug: prototype8
 date: 2021-12-18
+author: Roman
 ---
 
 The order of the PCB of {{% link "bp4" %}} has arrived, and so all the
