--- a/content/blog/2022-01-18-hackaday.md
+++ b/content/blog/2022-01-18-hackaday.md
@@ -2,6 +2,7 @@
 title: "HackChat & Hackaday Article"
 slug: hackaday
 date: 2022-01-18
+author: Roman
 ---
 
 Someone at Hackaday kindly invited me ("hut") to host a [Hack Chat about
