--- a/content/blog/2022-01-19-p9.md
+++ b/content/blog/2022-01-19-p9.md
@@ -2,6 +2,7 @@
 title: "Prototype 9 + Matrix Chatroom"
 slug: prototype9
 date: 2022-01-19
+author: Roman
 ---
 
 News #1: PsyLink now has a Matrix chatroom: [#psylink:matrix.org](https://matrix.to/#/#psylink:matrix.org)
