--- a/content/blog/2022-02-22-mcp6n11.md
+++ b/content/blog/2022-02-22-mcp6n11.md
@@ -2,6 +2,7 @@
 title: "Microchip 6N11-100"
 slug: mcp6n11
 date: 2022-02-22
+author: Roman
 ---
 
 [In my quest for premature optimization](/blog/ina155), I tried out yet another instrumentation amplifier chip: The [Microchip MCP6N11-100](https://www.microchip.com/en-us/product/MCP6N11).  At 1.55€, this chip is about 4 times cheaper than the INA128 instrumentational amplifier (which is currently the cost bottleneck), and would make a 16-electrode-PsyLink about half as expensive.  It also works with as little as 1.8V (while INA128 requires 4.5V), eliminating the need for power conversion if a 3.7V lithium battery is used.
