--- a/content/blog/2022-02-24-bom.md
+++ b/content/blog/2022-02-24-bom.md
@@ -2,6 +2,7 @@
 title: "Added Bills of Materials"
 slug: bom
 date: 2022-02-24
+author: Roman
 ---
 
 This is long overdue, but the following prototypes now each have a BOM (bill of materials) in OpenDocument Spreadsheet (.ods) format, including a breakdown of the raw material cost, in case you'd like to replicate them:
