--- a/content/blog/2023-02-05-retro2022.md
+++ b/content/blog/2023-02-05-retro2022.md
@@ -2,6 +2,7 @@
 title: "2022 Retrospective"
 slug: retro2022
 date: 2023-02-05
+author: Roman
 ---
 
 I've gotten out of the flow of writing blog entries, but that doesn't mean we have been idle.  There has been progress in the PsyLink sphere along various fronts and I could make several blog posts out of it, but I want to try something new, and summarize everything in a 2022 retrospective post:
