--- a/content/blog/2021-06-16-bp3.md
+++ b/content/blog/2021-06-16-bp3.md
@@ -2,6 +2,7 @@
 title: "Power Module 3"
 slug: power-module3
 date: 2021-06-16
+author: Roman
 ---
 
 Since {{% link "bp2" %}} has the wrong PCB layout for the step-up converter, I
