--- a/content/blog/2022-02-15-mass.md
+++ b/content/blog/2022-02-15-mass.md
@@ -2,6 +2,7 @@
 title: "Mass production"
 slug: mass
 date: 2022-02-15
+author: Roman
 ---
 
 More and more people are asking me to send them a PsyLink prototype!  [I've written some Tutorials](https://codeberg.org/psylink/psylink/wiki/) to help the users to get started, and I'm working diligently to assemble them all.  Can't wait to see the ways in which they will be used. :)
