--- a/content/blog/2022-02-23-reddot.md
+++ b/content/blog/2022-02-23-reddot.md
@@ -2,6 +2,7 @@
 title: "3M Red Dot electrodes"
 slug: reddot
 date: 2022-02-23
+author: Roman
 ---
 
 [Alex Lao](http://www.voltagedivide.com/) suggested to try some [3M Red Dot electrodes](https://www.3m.com/3M/en_US/medical-us/red-dot-ecg-electrodes/), and so I got me some of the model [2248-50](https://www.3m.com/3M/en_US/p/d/v000154363/) (he actually suggested model [2660](https://www.3m.com/3M/en_US/p/d/b00037638/) but I mixed it up.)  They are used for ECG patient monitoring, which is close enough, right?
