update links to match `schematics_restructuring` branch of psylink repo

--- a/content/boards/b3.2.md
+++ b/content/boards/b3.2.md
@@ -6,7 +6,7 @@ image_back: boards/b3.2_back.png
 date: 2022-01-26
 prototypes: ["p9.2"]
 tested: true
-src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/b3.2.kicad_pcb
+src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/electrode_module3.2
 circuit: c10.2
 priority: 1
 ---
