--- a/content/boards/b4.md
+++ b/content/boards/b4.md
@@ -5,7 +5,7 @@ image: boards/b4.png
 image_back: boards/b4_back.png
 date: 2022-04-26
 blog: retro2022
-src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/b4/PsyLinkMCP.kicad_pcb
+src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/electrode_module4
 circuit: c13
 ---
 
