--- a/content/circuits/c10.2.md
+++ b/content/circuits/c10.2.md
@@ -6,7 +6,7 @@ date: 2022-02-01
 boards: ["b3.2"]
 prototypes: ["p9.1", "p9.2"]
 tested: true
-src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit10.2.sch
+src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/electrode_module3.2/electrode_module3.2.kicad_sch
 priority: 1
 ---
 
