add blog post links

--- a/content/prototypes/p10.md
+++ b/content/prototypes/p10.md
@@ -18,7 +18,7 @@ This basically {{% link "p8" %}} with minor bug fixes, higher amplification gain
 
 Changes compared to {{% link "p9.1" %}}:
 
-- Fixed aggressive filtering of signals by changing passive highpass filter capacitors C1-C8 from 100pF to 100nF.
+- Fixed aggressive filtering of signals by changing passive highpass filter capacitors C1-C8 from 100pF to 100nF.  (This was covered in a [blog post](https://psylink.me/blog/enhancedsignal/))
 
 Changes compared to {{% link "p9.1" %}}:
 
