add remark about non-sense arduino

--- a/content/prototypes/p10.md
+++ b/content/prototypes/p10.md
@@ -18,6 +18,7 @@ This basically {{% link "p8" %}} with minor bug fixes, higher amplification gain
 
 Changes compared to {{% link "p9.1" %}}:
 
+- Switched out the [Arduino Nano 33 BLE Sense](https://store.arduino.cc/products/arduino-nano-33-ble-sense) with a [Arduino Nano 33 BLE](https://store.arduino.cc/products/arduino-nano-33-ble), since it has all required features at ~66% of the cost.
 - Fixed aggressive filtering of signals by changing passive highpass filter capacitors C1-C8 from 100pF to 100nF.  (This was covered in a [blog post](https://psylink.me/blog/enhancedsignal/))
 
 Changes compared to {{% link "p9.1" %}}:
